backend/networking/backend-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-internal
  name: backend-internal
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: http-internal-port
    port: 5000
    protocol: TCP
    targetPort: 5000
